--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,31 @@ body {
     overflow-x: hidden;
 }
 
+.loader {
+    position: fixed;
+    z-index: 999999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(31, 30, 30);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader.hidden {
+    animation: fadeOut 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
 .header {
     height: 100vh;
     max-width: 960px;
@@ -103,6 +128,10 @@ nav ul li {
     #displayMoment {
         font-size: 35px;
         font-weight: bold;
+    }
+
+    .loader img {
+        width: 250px;
     }
 }
 
