--- a/css/style.css
+++ b/css/style.css
@@ -107,8 +107,53 @@ nav ul li {
     min-height: 100vh;
 }
 
+/* for arrow */
+/* inspired from https://codepen.io/raf187/pen/BvgGRQ */
+.arrow{
+    position: absolute;
+    top: 88%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.arrow span{
+    display: block;
+    border-bottom: 5px solid rgb(255, 6, 81);
+    border-right: 5px solid rgb(135, 6, 255);
+    transform: rotate(45deg);
+    margin: -10px;
+    animation: animate 2s infinite;
+}
+
+.arrow span:nth-child(2){
+    animation-delay: -0.2s;
+}
+
+.arrow span:nth-child(3){
+    animation-delay: -0.4s;
+}
+
+@keyframes animate {
+    0%{
+        opacity: 0;
+        transform: rotate(45deg) translate(-20px,-20px);
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+        transform: rotate(45deg) translate(20px,20px);
+    }
+}
+/* for arrow end*/
+
 /* Small screens */
 @media screen and (max-width: 720px) {
+
+    .loader img {
+        width: 250px;
+    }
 
     .header-content .header-logo img {
         width: 35vh;
@@ -130,8 +175,9 @@ nav ul li {
         font-weight: bold;
     }
 
-    .loader img {
-        width: 250px;
+    .arrow span {
+        width: 20px;
+        height: 20px;
     }
 }
 
@@ -156,5 +202,10 @@ nav ul li {
     #displayMoment {
         font-size: 55px;
         font-weight: bold;
+    }
+
+    .arrow span {
+        width: 30px;
+        height: 30px;
     }
 }
