--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+*:focus {
+    outline: 0 !important;
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -70,7 +74,7 @@ body {
 /* start of navbar */
 
 .header .hamburger {
-    position: absolute;
+    position: fixed;
     z-index: 999999;
 }
 
@@ -80,31 +84,88 @@ body {
     background-color: rgb(194, 97, 126);
 }
 
-
 .hamburger .hamburger-inner::before,
 .header .hamburger span.hamburger-inner::before {
     background-color: rgb(96, 2, 184);
 }
 
+.hamburger span.hamburger-inner::after {
+    background-color: white;
+}
+
+.hamburger span.hamburger-inner::before {
+    background-color: white;
+}
+
 nav {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    color: white;
-    background-color: black;
-    z-index: 555555;
+    height: 100vh;
     width: 100%;
+    color: white;
+
+    background-color: rgba(0, 0, 0, 0.89);
+    font-family: 'Titillium Web', sans-serif;
+    letter-spacing: 5px;
+    font-weight: 200;
+
+    z-index: 99999;
+    transition: 0.8s;
+    font-size: 5vh;
 }
 
 nav ul {
+    margin: 0px;
+    height: 100%;
+    padding: 28vh 0px 32vh 0px;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+nav div.col-lg-5 {
+    margin: 0px;
+    font-size: 4vh;
+    padding: 28vh 15vw 28vh 15vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+nav div.col-lg-5 h1 span {
+    font-size: 8vh;
+    color: rgb(32, 85, 170);
 }
 
 nav ul li {
     flex: 1;
     list-style-type: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    width: 100%;
 }
+
+nav ul li:hover {
+    transition: 0.5s;
+    color: rgb(92, 92, 92);
+    cursor: pointer;
+}
+
+.nav-hidden {
+    height: 0px;
+    transition: 0.5s;
+}
+
+.nav-items-hidden {
+    display: none;
+    transition: 0.5s;
+}
+
 /* end of navbar */
 
 
@@ -188,6 +249,10 @@ nav ul li {
 /* Small screens */
 @media screen and (max-width: 720px) {
 
+    nav div.col-lg-5 {
+        display: none;
+    }
+
     .loader img {
         width: 250px;
     }
@@ -225,6 +290,10 @@ nav ul li {
 
 /* Large screens */
 @media screen and (min-width: 720px) {
+
+    nav div.col-lg-5 {
+        height: 100vh;
+    }
 
     .header .hamburger {
         top: 50px;
