--- a/css/style.css
+++ b/css/style.css
@@ -286,7 +286,7 @@ nav ul li:hover {
 
     #displayMoment {
         font-size: 35px;
-        font-weight: bold;
+        font-family: 'Titillium Web', sans-serif;
     }
 
     .arrow span {
@@ -324,7 +324,7 @@ nav ul li:hover {
 
     #displayMoment {
         font-size: 55px;
-        font-weight: bold;
+        font-family: 'Titillium Web', sans-serif;
     }
 
     .arrow span {
