--- a/css/style.css
+++ b/css/style.css
@@ -386,12 +386,14 @@ h1.countdown {
 
 .event-card-container {
     height: 100%;
+    width: 100%;
     text-align: center;
+    padding: 0;
 }
 
 .event-card {
     color: rgba(235, 247, 253, 0.678);
-    margin: 8vh 2.5vw;
+    margin: 8vh 0vw;
     min-height: 34vh;
     padding: 5vh 2vw;
     border-radius: 22px;
@@ -485,6 +487,7 @@ footer {
     background-color: #101010;
     color: #e3e6f2;
     padding: 8vh 5vw;
+    margin: 0;
 }
 
 .footer-head {
@@ -508,6 +511,7 @@ footer {
     padding: 10px;
     background-color: black;
     color: #e3e6f2;
+    margin: 0;
 }
 
 .foot2.col-lg-12 {
@@ -532,6 +536,7 @@ footer {
     opacity: 0;
     transform: translateY(50px);
     transition: all 1s ease-out;
+    margin: 0;
 }
 
 .detail-container.fade-in,
@@ -541,19 +546,12 @@ footer {
 .event-card-container.fade-in {
     opacity: 1;
     transform: translateY(0);
+    margin: 0;
 }
 
 /* END OF ANIMATIONS */
 /* Small screens */
 @media screen and (max-width: 720px) {
-
-    .footer-head {
-        padding-top: 11vh;
-    }
-
-    .foot1.col-lg-4:nth-child(2) {
-        text-align: center;
-    }
 
     nav div.col-lg-5 {
         display: none;
@@ -589,7 +587,7 @@ footer {
         font-size: 5.5vh;
         text-align: center;
         position: relative;
-        top: -5vh;
+        top: -10vh;
     }
 
     .header-logo,
@@ -631,7 +629,12 @@ footer {
     }
 
     .event-card-container {
-        margin: 10vh auto;
+        margin: 10vh 10vw;
+        width: 100%;
+    }
+
+    div.row.events {
+        margin: 0px;
     }
 
     .event-card {
@@ -642,6 +645,15 @@ footer {
     .gallery {
         padding: 8vh 5vh;
     }
+
+    .footer-head {
+        padding-top: 11vh;
+    }
+
+    .foot1.col-lg-4:nth-child(2) {
+        text-align: center;
+    }
+
 }
 
 
