ui specs change

--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ nav ul li:hover {
     cursor: pointer;
 }
 
-nav a, nav a:visited {
+a, a:visited {
     color: white;
     text-decoration: none;
 }
@@ -316,15 +316,15 @@ nav a, nav a:visited {
     margin: 0px;
     color: rgb(59, 59, 59);
     background-color: rgb(255, 255, 255);
-    background-image: url(../sources/imgs/logo.png);
+    background-image: url(../sources/imgs/logoT.png);
     background-repeat: no-repeat;
     background-position-x: 450px;
     background-position-y: -200px;
     font-family: chunkfive;
 }
 
-div.timer-col.col-lg-6,
-div.detail-col.col-lg-6 {
+div.detail-col.col-lg-8,
+div.timer-col.col-lg-4 {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -332,7 +332,7 @@ div.detail-col.col-lg-6 {
     align-items: center;
 }
 
-div.timer-col.col-lg-6 {
+div.timer-col.col-lg-4 {
     padding: 0;
 }
 
@@ -359,10 +359,10 @@ h1.countdown {
 
 .detail-col h1:nth-child(1) {
     text-align: center;
-    text-shadow: 0 0 5px #000;
 }
 
 .detail-col h1:nth-child(2) {
+    line-height: 5vh;
     text-align: justify;
     text-shadow: 0 0 1px #000;
 }
@@ -381,7 +381,6 @@ h1.countdown {
 .events-header {
     margin: auto;
     color: rgba(211, 6, 143, 0.842);
-    text-shadow: 0 0 5px #000;
     font-size: 8vh;
     font-family: blackoutMid;
     padding: 5vh;
@@ -401,20 +400,33 @@ h1.countdown {
     padding: 5vh 2vw;
     border-radius: 22px;
     box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, .2);
-    background: #f857a6;
-    background: -webkit-linear-gradient(to right, #ff5858, #f857a6);
-    background: linear-gradient(to right, #ff5858, #f857a6);
+    background-color: #ff5858;
     -webkit-box-shadow: 7px 15px 37px -12px rgba(0,0,0,0.75);
     -moz-box-shadow: 7px 15px 37px -12px rgba(0,0,0,0.75);
     box-shadow: 7px 15px 37px -12px rgba(0,0,0,0.75);
     transition: 0.8s;
 }
 
-.event-card:hover, .brochure-button button:hover {
+
+#details-eve div:nth-child(2):hover {
+    color: white;
+    background-color: rgb(53, 53, 53);
+}
+
+#details-eve div:nth-child(3):hover {
+    background-color: blue;
+}
+
+#details-eve div:nth-child(4):hover {
+    background-color: rgba(255, 197, 5, 0.972);
+}
+
+.event-card:hover {
     -webkit-box-shadow: 7px 15px 37px -21px rgba(0,0,0,0.75);
     -moz-box-shadow: 7px 15px 37px -21px rgba(0,0,0,0.75);
     box-shadow: 7px 15px 37px -21px rgba(0,0,0,0.75);
-    color: rgba(200, 209, 214, 0.678);
+    color: rgb(2, 0, 0);
+    transform: scale(1.1);
 }
 
 .event-card h1 {
@@ -431,7 +443,7 @@ h1.countdown {
 .event-card button {
     text-align: center;
     border-radius: 11px;
-    color: rgb(247, 9, 155);
+    color: rgb(8, 8, 8);
     background-color: rgba(235, 247, 253, 0.678);
     border: 0px;
     padding: 0.8vh 2vw;
@@ -441,16 +453,21 @@ h1.countdown {
 }
 
 .event-card button:hover {
-    background-color: rgba(153, 168, 177, 0.678);
+    color: white;
+    background-color: rgba(5, 5, 5, 0.884);
 }
 
 .brochure-button {
-    margin: 10vh auto;
+    margin: 6vh auto;
 }
 
-.brochure-button button{
-    font-size: 2vh;
-    padding: 2vh 2vw;
+.register-button {
+    margin: 6vh auto;
+}
+
+.brochure-button button, .register-button button {
+    font-size: 2.4vh;
+    padding: 2.5vh 4vw;
     border: 0;
     border-radius: 22px;
     color: rgb(255, 255, 255);
@@ -461,6 +478,15 @@ h1.countdown {
     -moz-box-shadow: 7px 15px 37px -12px rgba(0,0,0,0.75);
     box-shadow: 7px 15px 37px -12px rgba(0,0,0,0.75);
     transition: 0.8s;
+}
+
+.brochure-button button:hover, .register-button button:hover {
+    background-color: #ff5858;
+    color: black;
+    transform: scale(1.1);
+    -webkit-box-shadow: 7px 15px 37px -21px rgba(0,0,0,0.75);
+    -moz-box-shadow: 7px 15px 37px -21px rgba(0,0,0,0.75);
+    box-shadow: 7px 15px 37px -21px rgba(0,0,0,0.75);
 }
 
 /* END OF EVENTS */
@@ -481,7 +507,6 @@ h1.countdown {
 .gallery-header {
     margin: auto;
     color: rgba(0, 17, 255, 0.842);
-    text-shadow: 0 0 5px #000;
     font-size: 11vh;
     font-family: blackoutMid;
     padding-bottom: 5vh;
