--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,10 @@ div.col-lg-7 {
     margin: auto;
 }
 
+.header-text img {
+    width : 100%;
+}
+
 .header-video {
     position: absolute;
     top: 0;
@@ -457,6 +461,10 @@ h1.countdown {
     background-color: rgba(5, 5, 5, 0.884);
 }
 
+.event-buttons {
+    margin: 10vh auto;
+}
+
 .brochure-button {
     margin: 6vh auto;
 }
@@ -474,9 +482,6 @@ h1.countdown {
     font-family: 'Open Sans', sans-serif;
     font-weight: 100;
     background-color: rgb(247, 9, 155);
-    -webkit-box-shadow: 7px 15px 37px -12px rgba(0,0,0,0.75);
-    -moz-box-shadow: 7px 15px 37px -12px rgba(0,0,0,0.75);
-    box-shadow: 7px 15px 37px -12px rgba(0,0,0,0.75);
     transition: 0.8s;
 }
 
@@ -484,9 +489,6 @@ h1.countdown {
     background-color: #ff5858;
     color: black;
     transform: scale(1.1);
-    -webkit-box-shadow: 7px 15px 37px -21px rgba(0,0,0,0.75);
-    -moz-box-shadow: 7px 15px 37px -21px rgba(0,0,0,0.75);
-    box-shadow: 7px 15px 37px -21px rgba(0,0,0,0.75);
 }
 
 /* END OF EVENTS */
@@ -494,18 +496,20 @@ h1.countdown {
 
 /* START OF GALLERY */
 
-.gallery {
+.gallery1 {
+    margin: 0;
     min-height: 50vh;
     color: white;
     background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
 }
 
 .carousel-item {
-    border: 8px solid rgba(89, 0, 255, 0.733);
+    border-top: 11px solid rgba(89, 0, 255, 0.733);
+    border-bottom: 11px solid rgba(89, 0, 255, 0.733);
 }
 
 .gallery-header {
-    margin: auto;
+    margin-bottom: 5vh;
     color: rgba(0, 17, 255, 0.842);
     font-size: 11vh;
     font-family: blackoutMid;
