--- a/css/style.css
+++ b/css/style.css
@@ -306,14 +306,8 @@ a, a:visited {
 }
 
 .detail-col h1 {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
-}
-
-.detail-col h1:nth-child(1) {
-    font-family: chunkfive;
-    font-weight: 300;
-    font-size: 5vh;
+    font-weight: 400;
+    font-family: 'Cardo', serif;
 }
 
 .timing-section {
@@ -322,8 +316,6 @@ a, a:visited {
     background-color: rgb(255, 255, 255);
     background-image: url(../sources/imgs/logoT.png);
     background-repeat: no-repeat;
-    background-position-x: 450px;
-    background-position-y: -200px;
     font-family: chunkfive;
 }
 
@@ -343,7 +335,8 @@ div.timer-col.col-lg-4 {
 .detail-col h1.about-header {
     color: rgba(255, 0, 98, 0.76);
     font-size: 8vh;
-    font-family: blackoutMid;
+    font-weight: 700;
+    font-family: 'Playfair Display', serif;
 }
 
 h1.countdown {
@@ -354,11 +347,11 @@ h1.countdown {
     align-items: center;
     padding: 4vh 5vw;
     color: #FAFBFC;
+    border-radius: .8rem;
     background: #8E2DE2;
     background: -webkit-linear-gradient(to right, #4A00E0, #8E2DE2);
     background: linear-gradient(to right, #4A00E0, #8E2DE2);
     box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, .2);
-    border-radius: .8rem;
 }
 
 .detail-col h1:nth-child(1) {
@@ -368,7 +361,6 @@ h1.countdown {
 .detail-col h1:nth-child(2) {
     line-height: 5vh;
     text-align: justify;
-    text-shadow: 0 0 1px #000;
 }
 
 /* END OF ABOUT SECTION */
@@ -377,8 +369,8 @@ h1.countdown {
 /* START OF EVENTS */
 
 .events {
-    min-height: 55vh;
     margin: 0;
+    min-height: 55vh;
     background-color: rgba(235, 247, 253, 0.678);
 }
 
@@ -386,28 +378,29 @@ h1.countdown {
     margin: auto;
     color: rgba(211, 6, 143, 0.842);
     font-size: 8vh;
-    font-family: blackoutMid;
     padding: 5vh;
     text-align: center;
+    font-weight: 700;
+    font-family: 'Playfair Display', serif;
 }
 
 .event-card-container {
-    height: 100%;
-    width: 100%;
-    text-align: center;
     padding: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
 }
 
 .event-card {
-    color: rgba(235, 247, 253, 0.678);
     min-height: 34vh;
     padding: 5vh 2vw;
     border-radius: 22px;
-    box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, .2);
     background-color: #ff5858;
-    -webkit-box-shadow: 7px 15px 37px -12px rgba(0,0,0,0.75);
-    -moz-box-shadow: 7px 15px 37px -12px rgba(0,0,0,0.75);
+    color: rgba(235, 247, 253, 0.678);
+    box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, .2);
     box-shadow: 7px 15px 37px -12px rgba(0,0,0,0.75);
+    -moz-box-shadow: 7px 15px 37px -12px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 7px 15px 37px -12px rgba(0,0,0,0.75);
     transition: 0.8s;
 }
 
@@ -426,33 +419,33 @@ h1.countdown {
 }
 
 .event-card:hover {
-    -webkit-box-shadow: 7px 15px 37px -21px rgba(0,0,0,0.75);
-    -moz-box-shadow: 7px 15px 37px -21px rgba(0,0,0,0.75);
-    box-shadow: 7px 15px 37px -21px rgba(0,0,0,0.75);
     color: rgb(2, 0, 0);
     transform: scale(1.1);
+    box-shadow: 7px 15px 37px -21px rgba(0,0,0,0.75);
+    -moz-box-shadow: 7px 15px 37px -21px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 7px 15px 37px -21px rgba(0,0,0,0.75);
 }
 
 .event-card h1 {
     font-size: 3vh;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Cardo', serif;
 }
 
 .fas {
-    margin: 4vh auto;
     font-size: 6vh;
+    margin: 4vh auto;
 }
 
 .event-card button {
+    border: 0px;
+    padding: 0.8vh 2vw;
     text-align: center;
     border-radius: 11px;
     color: rgb(8, 8, 8);
-    background-color: rgba(235, 247, 253, 0.678);
-    border: 0px;
-    padding: 0.8vh 2vw;
-    font-family: 'Open Sans', sans-serif;
     font-weight: 400;
+    font-family: 'Cardo', serif;
+    background-color: rgba(235, 247, 253, 0.678);
     transition: 0.8s;
 }
 
@@ -474,13 +467,13 @@ h1.countdown {
 }
 
 .brochure-button button, .register-button button {
+    border: 0;
     font-size: 2.4vh;
     padding: 2.5vh 4vw;
-    border: 0;
     border-radius: 22px;
+    font-weight: 400;
+    font-family: 'Cardo', serif;
     color: rgb(255, 255, 255);
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 100;
     background-color: rgb(247, 9, 155);
     transition: 0.8s;
 }
@@ -512,24 +505,80 @@ h1.countdown {
     margin-bottom: 5vh;
     color: rgba(0, 17, 255, 0.842);
     font-size: 11vh;
-    font-family: blackoutMid;
+    font-weight: 700;
+    font-family: 'Playfair Display', serif;
     padding-bottom: 5vh;
     text-align: center;
 }
 
-.carousel-caption {
-    background-color: rgba(42, 43, 44, 0.678);
-}
-
-.carousel-caption h5 {
-    font-family: blackoutMid;
-}
-
-.carousel-caption p {
-    font-family: lmonoLight;
-}
-
 /* END OF GALLERY */
+
+/* START OF CONTACT US */
+
+.contact-us {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    min-height: 50vh;
+}
+
+.contact-desc {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    padding: 22px;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-desc h1 {
+    text-align: center;
+    width: 100%;
+    font-size: 8vh;
+    font-weight: 700;
+    font-family: 'Playfair Display', serif;
+}
+
+i.fab {
+    padding: 11px;
+    color: black;
+    font-size: 5vh;
+}
+
+.fa-facebook:hover {
+    color: blue;
+    transition: 0.5s;
+}
+
+.fa-instagram:hover {
+    color: #ff5858;
+    transition: 0.5s;
+}
+
+.fa-youtube:hover {
+    color: red;
+    transition: 0.5s;
+}
+
+.email-us-button {
+    border: 0;
+    width: 100%;
+    padding: 20px 40px;
+    color: white;
+    background-color: black;
+    font-weight: 700;
+    font-family: 'Playfair Display', serif;
+    transition: 0.5s;
+}
+
+.email-us-button:hover {
+    color: black;
+    border: 1px solid black;
+    background-color: white;
+}
+
+/* END OF CONTACT US */
 
 
 /* START OF FOOTER */
@@ -546,7 +595,8 @@ footer {
 }
 
 .footer-head {
-    font-family: blackoutSun;
+    font-weight: 700;
+    font-family: 'Playfair Display', serif;
 }
 
 .foot1 p,
@@ -561,12 +611,12 @@ footer {
 }
 
 .foot2 {
-    text-align: center;
-    font-size: 14px;
-    padding: 10px;
-    background-color: black;
-    color: #e3e6f2;
     margin: 0;
+    padding: 10px;
+    font-size: 14px;
+    color: #e3e6f2;
+    text-align: center;
+    background-color: black;
 }
 
 .foot2.col-lg-12 {
@@ -782,6 +832,10 @@ footer {
 
     .detail-col h1:nth-child(1) {
         padding: 11vh 0 0 0;
+    }
+
+    .detail-col h1:nth-child(2) {
+        font-size: 2.2vh;
     }
 
     .detail-col h1 {
